fixed alignment of section-2 destination moon

--- a/space-tourism-website-main/space-tourism-website-main/styles/destination_moon.css
+++ b/space-tourism-website-main/space-tourism-website-main/styles/destination_moon.css
@@ -98,6 +98,11 @@ section {
 
 .section-2 {
     margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
 }
 
 .section-2-p {
